2014-07-16  Release Manager

	* GCC 4.9.1 released.

2014-07-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/61459
	PR fortran/58883
	* trans-expr.c (fcncall_realloc_result): Use the natural type
	for the address expression of 'res_desc'.

2014-07-07  Dominique d'Humieres <dominiq@lps.ens.fr>
	    Mikael Morin <mikael@gcc.gnu.org>

	PR fortran/41936
	* trans-expr.c (gfc_conv_expr_reference): Deallocate array
	components.

2014-07-02  Jakub Jelinek  <jakub@redhat.com>
	    Fritz Reese  <Reese-Fritz@zai.com>

	* decl.c (variable_decl): Reject old style initialization
	for derived type components.

2014-06-30  Jakub Jelinek  <jakub@redhat.com>

	* module.c (MOD_VERSION): Revert back to 12.
	(MOD_VERSION_OMP4): Define.
	(module_omp4): New variable.
	(mio_symbol): Call mio_omp_declare_simd only if module_omp4.
	(read_module): Load omp udrs only if module_omp4.
	(write_module): Write omp udrs only if module_omp4.
	(find_omp_declare_simd): New function.
	(gfc_dump_module): Compute module_omp4.  Use MOD_VERSION_OMP4
	if module_omp4.
	(gfc_use_module): Handle MOD_VERSION_OMP4, set module_omp4.

	Backported from mainline
	2014-06-25  Jakub Jelinek  <jakub@redhat.com>

	* trans.h (gfc_omp_clause_linear_ctor): New prototype.
	* trans-openmp.c (gfc_omp_linear_clause_add_loop,
	gfc_omp_clause_linear_ctor): New functions.
	(gfc_trans_omp_clauses): Make sure OMP_CLAUSE_LINEAR_STEP has
	correct type.  Set OMP_CLAUSE_LINEAR_ARRAY flag if needed.
	* f95-lang.c (LANG_HOOKS_OMP_CLAUSE_LINEAR_CTOR): Redefine.

	2014-06-24  Jakub Jelinek  <jakub@redhat.com>

	* dump-parse-tree.c (show_omp_namelist): Use n->udr->udr instead
	of n->udr.
	* f95-lang.c (gfc_init_builtin_functions): Initialize
	BUILT_IN_ASSUME_ALIGNED.
	* gfortran.h (gfc_omp_namelist): Change udr field type to
	struct gfc_omp_namelist_udr.
	(gfc_omp_namelist_udr): New type.
	(gfc_get_omp_namelist_udr): Define.
	(gfc_resolve_code): New prototype.
	* match.c (gfc_free_omp_namelist): Free name->udr.