@@ -1,3 +1,9 @@
+2014-07-19  Paul Thomas  <pault@gcc.gnu.org>
+
+	Backport from mainline
+	PR fortran/61780
+	* gfortran.dg/dependency_44.f90 : New test
+
 2014-07-18  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
